--- a/JustMoby_Test_2025/Assets/_Project/Resources/Locales/Locale_English.json
+++ b/JustMoby_Test_2025/Assets/_Project/Resources/Locales/Locale_English.json
@@ -12,7 +12,11 @@
 		"Value":"Good! You just started a tower! ^_^"
 	},
 	{
-		"Key":"CUBE_TOWER_GAME/CUBE_TOWER_ADD",
+		"Key":"CUBE_TOWER_GAME/CUBE_TOWER_ADD_SUCCESS",
 		"Value":"Nice! You add another cube to tower! ^_^"
+	},
+	{
+		"Key":"CUBE_TOWER_GAME/CUBE_TOWER_ADD_FAIL",
+		"Value":"Tower cube adding failed >_<"
 	}
 ]
